package fr.nicolasgdj.iut.s3.coo.td2.exo2;

public interface Connectable {

	void equiper(String gadget);
	
}
